--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io.connect(
-        "https://3000-amogh827-simplechatapp-yoogwfgldk4.ws-us104.gitpod.io/"
-      );
+      const socket = io.connect("http://localhost:3000");
 
       const emojiMap = {
         react: "📖", //could not find the emoji
